--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,36 @@
-version: "3"
+version: '3.8'
+
 services:
-  app:
+  web:
     build: .
-    command: pytest --maxfail=1 --disable-warnings -q
+    container_name: flask_app
+    command: gunicorn -w 4 -b 0.0.0.0:8000 wsgi:app
+    ports:
+      - "8000:8000"
+    environment:
+      - FLASK_CONFIG=${FLASK_CONFIG}
     volumes:
       - .:/app
-    ports:
-      - "5000:5000"
+    networks:
+      - flask-network
+    depends_on:
+      - db
+
+  db:
+    image: postgres:latest
+    container_name: postgres_db
     environment:
-      - FLASK_ENV=testing
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: ${DB_NAME}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - flask-network
+
+networks:
+  flask-network:
+    driver: bridge
+
+volumes:
+  postgres_data:
