--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,11 @@ services:
   web:
     build: .
     container_name: flask_app
-    command: gunicorn -w 4 -b 0.0.0.0:8000 wsgi:app
+    command: python run.py
     ports:
-      - "8000:8000"
-    environment:
-      - FLASK_CONFIG=${FLASK_CONFIG}
+      - 5000:5000
+    env_file:
+      - ./.env.dev
     volumes:
       - .:/app
     networks:
@@ -19,10 +19,6 @@ services:
   db:
     image: postgres:latest
     container_name: postgres_db
-    environment:
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
